# antares-study-version-rtei

./: CHANGELOG.md  README.md  README_fr.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-doc.txt  requirements.txt
.github/workflows/: lint.yml  main.yml  python-package.yml  python-publish.yml
docs/: CHANGELOG.md  development.md  index.md  installation.md  overview.md  usage.md
docs/assets/: antares-study-version-title.xcf
scripts/: update_version.py
src/antares/study/version/: __about__.py  __init__.py  __main__.py  cli.py  converters.py  exceptions.py  ini_reader.py  ini_writer.py  model.py
src/antares/study/version/__pyinstaller/: __init__.py  hook-antares.study.version.py
src/antares/study/version/create_app/: __init__.py
src/antares/study/version/model/: __init__.py  exceptions.py  general_data.py  study_antares.py  study_version.py
src/antares/study/version/show_app/: __init__.py
src/antares/study/version/upgrade_app/: __init__.py  exceptions.py  helpers.py  scenario_mapping.py  upgrade_method.py  upgrader_0701.py  upgrader_0702.py  upgrader_0800.py  upgrader_0801.py  upgrader_0802.py  upgrader_0803.py  upgrader_0804.py  upgrader_0805.py  upgrader_0806.py  upgrader_0807.py  upgrader_0808.py  upgrader_0900.py  upgrader_0902.py
tests/: conftest.py  helpers.py  test_about.py  test_cli.py  test_converters.py  test_model.py  test_using_pydantic.py
tests/create_app/: test_create_app.py
tests/show_app/: test_show_app.py
tests/upgrade_app/: test_filter_out_child_files.py  test_upgrade_0701.py  test_upgrade_0702.py  test_upgrade_0800.py  test_upgrade_0801.py  test_upgrade_0802.py  test_upgrade_0803.py  test_upgrade_0804.py  test_upgrade_0805.py  test_upgrade_0806.py  test_upgrade_0807.py  test_upgrade_0808.py  test_upgrade_0900.py  test_upgrade_0902.py
